--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gul _ gram</title>
-    <link href="style.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" type="x-icon" href="salah.png" />
     <style>
       .dark-mode {
